feat(ai_chat): multi-thread chat with delete support
Restructure chat module: per-user thread isolation, sendMessage returns
assistant response, DELETE /threads/{id}, thread summary refresh.
Update ports, controllers, and response DTOs.